Minor changes.